--- a/home-week8/typing-game/style.css
+++ b/home-week8/typing-game/style.css
@@ -106,6 +106,12 @@ input[type="text"] {
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    outline: none;
+}
+
+input[type="text"]:focus {
+    border-color: aquamarine;
+    box-shadow: 0 0 10px rgb a(135, 206, 250, 0.5);
 }
 
 button {
@@ -131,4 +137,11 @@ button:hover {
 .error {
     background-color: lightcoral;
     border: 1px solid red;
+}
+
+input.error {
+    background-color: lightcoral;
+    border-color: red;
+    color: white;
+    transition: all 0.3s ease-in-out;
 }
